# doi2notion-py

./: Dockerfile  Makefile  README.md  add.py  docker-compose.yml  pyproject.toml  requirements.txt  update.py
.devcontainer/: devcontainer.json
doi2notion/: __main__.py
doi2notion/interface/: arxiv_paper.py  crossref_paper.py  paper.py
doi2notion/lib/: arxiv_attribute_parser.py  crossref_attribute_parser.py  notion_manager.py  notion_property_generator.py
